src/objects/QPMS__NC_Product__c.object
<CustomObject>
    <description>This is a Non Conformance - Product object.</description>
    <fields>
        <fullName>QPMS__Defect_Count_Unique__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of unique defects.  This means that repeated defects across batch/lots are not counted more than once.</description>
        <inlineHelpText>Count of unique defects.  This means that repeated defects across batch/lots are not counted more than once.</inlineHelpText>
        <label>Defect_Count_Unique</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Defect_Count__c</fullName>
        <label>Defect Count</label>
        <summarizedField>QPMS__Product_Lot_Numbers__c.QPMS__Defect_Count__c</summarizedField>
        <summaryForeignKey>QPMS__Product_Lot_Numbers__c.QPMS__NC_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Site_Name__c</fullName>
        <formula>QPMS__Manufacturing_Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manufacturing Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>NC Products</relationshipLabel>
        <relationshipName>NC_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Non_Conformance_Name__c</fullName>
        <formula>QPMS__Non_Conformance__r.QPMS__Non_Conformance_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Conformance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Non_Conformance__c</fullName>
        <label>Non-Conformance</label>
        <referenceTo>QPMS__Non_Conformance__c</referenceTo>
        <relationshipLabel>NC Products</relationshipLabel>
        <relationshipName>NC_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QPMS__Primary_Product__c</fullName>
        <formula>QPMS__Product__c = QPMS__Non_Conformance__r.QPMS__Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Product_Name__c</fullName>
        <formula>QPMS__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>QPMS__Product__c</referenceTo>
        <relationshipLabel>NC Products</relationshipLabel>
        <relationshipName>NC_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NC Product</label>
    <nameField>
        <displayFormat>NCP{00000}</displayFormat>
        <label>NC Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NC Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>QPMS__Product_is_required</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(QPMS__Product__c)</errorConditionFormula>
        <errorDisplayField>QPMS__Product__c</errorDisplayField>
        <errorMessage>Products: Product is required.</errorMessage>
    </validationRules>
</CustomObject>